<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="@dimen/elevation"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/action_details" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/poster_height">

                <ImageView
                    android:id="@+id/poster_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/poster_height"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/favourite"
                    android:layout_width="@dimen/star_w_h"
                    android:layout_height="@dimen/star_w_h"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/margin_views"
                    android:scaleType="centerCrop"
                    android:src="@drawable/round_star_border_white_48dp" />

            </RelativeLayout>


            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_views"
                android:layout_marginRight="@dimen/margin_views"
                android:layout_marginTop="@dimen/margin_views"

                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/black"
                android:textSize="@dimen/title_size"
                android:textStyle="italic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:layout_marginLeft="@dimen/divider"
                android:layout_marginRight="@dimen/divider"
                android:layout_marginTop="@dimen/margin_views"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_views"
                android:layout_marginRight="@dimen/margin_views"
                android:layout_marginTop="@dimen/margin_views"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_date_range_black_48dp" />

                <TextView
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/details_release_date_title"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/other_titles_size" />

                <TextView
                    android:id="@+id/release_date_text_view"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:layout_marginLeft="@dimen/divider"
                android:layout_marginRight="@dimen/divider"
                android:layout_marginTop="@dimen/margin_views"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_views"
                android:layout_marginRight="@dimen/margin_views"
                android:layout_marginTop="@dimen/margin_views"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_stars_black_48dp" />


                <TextView
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/details_vote_average_title"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/other_titles_size" />

                <TextView
                    android:id="@+id/vote_average_text_view"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:layout_marginLeft="@dimen/divider"
                android:layout_marginRight="@dimen/divider"
                android:layout_marginTop="@dimen/margin_views"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_views"
                android:layout_marginRight="@dimen/margin_views"
                android:layout_marginTop="@dimen/margin_views"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/details_synopsis_title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/other_titles_size" />

            <TextView
                android:id="@+id/synopsis_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_views"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:layout_marginBottom="@dimen/margin_views"
                android:layout_marginLeft="@dimen/divider"
                android:layout_marginRight="@dimen/divider"
                android:layout_marginTop="@dimen/margin_views"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/details_trailers_title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/other_titles_size" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_views" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:layout_marginBottom="@dimen/margin_views"
                android:layout_marginLeft="@dimen/divider"
                android:layout_marginRight="@dimen/divider"
                android:layout_marginTop="@dimen/margin_views"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/details_reviews_title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/other_titles_size" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_views" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>